--- a/Cool-peluqueros.html
+++ b/Cool-peluqueros.html
@@ -79,7 +79,7 @@
                             <p> Corte, Peinado, Tinte, Tratamientos, Peinado para ocasiones especiales y mucho más</p>
                         </div>
                         <div id=manicura class=servicios-box>
-                            <img src="Images/nails-icon.jpg" class=img-servicios>
+                            <img src="images/nails-icon.jpg" class=img-servicios>
                             <h4> Manicura </h4>
                             <h5> Los diseños más atrevidos</h5>
                         </div>
