fix photo links

--- a/Cool-peluqueros.html
+++ b/Cool-peluqueros.html
@@ -154,13 +154,13 @@
         <section id="container-galery">
             <div class="galery">
                 <h2> Galería</h2>
-                <img src="Images/42465252_523808631412321_2261594675582337024_n.jpg" alt="">
-                <img src="Images/42419137_523808828078968_1092473645256671232_o.jpg" alt="">
-                <img src="Images/38451377_488983281561523_7515254360595496960_n.jpg" alt="">
-                <img src="Images/36666640_459893817803803_5694419601274699776_n.jpg" alt="">
-                <img src="Images/31055301_417084458751406_2143173983325913088_n.jpg" alt="">
-                <img src="Images/100_1386.JPG" alt="">
-                <img src="Images/cache_2418849142.jpg" alt="">
+                <img src="images/42465252_523808631412321_2261594675582337024_n.jpg" alt="">
+                <img src="images/42419137_523808828078968_1092473645256671232_o.jpg" alt="">
+                <img src="images/38451377_488983281561523_7515254360595496960_n.jpg" alt="">
+                <img src="images/36666640_459893817803803_5694419601274699776_n.jpg" alt="">
+                <img src="images/31055301_417084458751406_2143173983325913088_n.jpg" alt="">
+                <img src="images/100_1386.JPG" alt="">
+                <img src="images/cache_2418849142.jpg" alt="">
             </div>
             <div id="link-como-llegar"></div>
         </section>
