media query added

--- a/Cool-peluqueros.html
+++ b/Cool-peluqueros.html
@@ -20,7 +20,7 @@
         <ul id="menu-list">
             <li> <a href="#container-salon"> Nuestro Salón</a> </li>
             <li> <a href="#link-servicios"> Nuestros Servicios </a></li>
-            <li> <a href="#container-precios"> Lista de Precios </a></li>
+            <!-- <li> <a href="#container-precios"> Lista de Precios </a></li> -->
             <li> <a href="#container-galery"> Galería </a> </li>
             <li> <a href="#link-como-llegar"> Cómo llegar </a></li>
             <li> <a href="#container-contacto"> Contacto </a></li>
@@ -44,7 +44,7 @@
 
                 <div class="banner" id="banner2">
                     <h3> Ofertas del mes</h3>
-                    <p> Descubre nuestras promociones</p>
+                    <p id="optional"> Descubre nuestras promociones</p>
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
                 <div id="container-salon">
 
                     <div class="content" id="salon">
-                        <h3 id="nuestro-salon" class="salon"> Nuestro salón</h3>
+                        <div id="h3-nuestro-salon"><h3 id="nuestro-salon" class="salon"> Nuestro salón</h3></div>
                         <p id="salon3" class="salon"> <img src="images/pink.jpg"> </p>
                         <h4 id="salon1" class="salon"> Contamos con una larga experiencia en peluquería y trabajamos
                             con los mejores productos.</h4>
@@ -98,7 +98,7 @@
                 </div>
             </section>
 
-            <section id="container-precios">
+            <!-- <section id="container-precios">
                 <div id="precios">
                     <div id="title-precios">
                         <h2>Lista de Precios</h2>
@@ -149,7 +149,7 @@
 
                 </div>
         </div>
-        </section>
+        </section> -->
 
         <section id="container-galery">
             <div class="galery">
@@ -176,8 +176,10 @@
                 <h2> Contacto </h2>
                 <div>
                     <p> Telefono: (+34) 91 713 40 81</p>
-                    <p> Coolpeluqueros@gmail.com </p>
                     <p> Av. Los Almendros 290, Rivas Vaciamadrid, Madrid</p>
+                    <p> Horario: Lunes-Sabado:10:00-21:00</p>
+                    <p> Coolpeluqueros@gmail.com </p>
+                    
                 </div>
         </section>
     </main>
