--- a/Cool-peluqueros.html
+++ b/Cool-peluqueros.html
@@ -177,7 +177,7 @@
                 <div>
                     <p> Telefono: (+34) 91 713 40 81</p>
                     <p> Av. Los Almendros 290, Rivas Vaciamadrid, Madrid</p>
-                    <p> Horario: Lunes-Sabado:10:00-21:00</p>
+                    <p> <b< Lunes-Sabado:10:00-21:00 </b></p>
                     <p> Coolpeluqueros@gmail.com </p>
                     
                 </div>
