--- a/Cool-peluqueros.html
+++ b/Cool-peluqueros.html
@@ -55,7 +55,7 @@
 
                     <div class="content" id="salon">
                         <div id="h3-nuestro-salon"><h3 id="nuestro-salon" class="salon"> Nuestro salón</h3></div>
-                        <p id="salon3" class="salon"> <img src="images/pink.jpg"> </p>
+                        <p id="salon3" class="salon"> <img src="images/pink.jpg" id="img-nuestro-salon"> </p>
                         <h4 id="salon1" class="salon"> Contamos con una larga experiencia en peluquería y trabajamos
                             con los mejores productos.</h4>
                         <p id="salon2" class="salon"> Servicio de excelente calidad gracias a un equipo de peluqueros
